# Mandelbrot

./: .gitignore
Mandelbrot_Win32/: Mandelbrot_Win32.sln  Mandelbrot_Win32.vcxproj  Mandelbrot_Win32.vcxproj.filters
Mandelbrot_Win32/Mandelbrot_Win32/: CMakeLists.txt  cuda_helper.cpp  cuda_helper.h  fractal.cu  fractal.h  main.cpp  mandelbrot.cpp  mandelbrot.h  timer.cpp  timer.h
