PROJECT(mandelbrot)

SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_COMPILER g++-4.4)
 
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
#FIND_PACKAGE(PNG REQUIRED)

SET(CUDA_NVCC_FLAGS "-arch=sm_13" CACHE STRING "nvcc flags" FORCE)
 
SET (CUDA_VERBOSE_BUILD ON CACHE BOOL "nvcc verbose" FORCE)
 
SET(LIB_TYPE STATIC)

CUDA_ADD_EXECUTABLE(mandelbrot main.cu mandelbrot.cpp fractal.cu timer.cpp cuda_helper.cpp mandelbrot.h fractal.h timer.h cuda_helper.h)

TARGET_LINK_LIBRARIES(mandelbrot ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(mandelbrot ${GLUT_LIBRARIES})
TARGET_LINK_LIBRARIES(mandelbrot ${GLEW_LIBRARIES})